--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -64,6 +64,13 @@ p {
   width: calc((100% - 120px) / 4);
 }
 
+.gallery_item:hover,
+.gallery_item:focus {
+  cursor: zoom-in;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .stats {
   padding-top: 10px;
   padding-bottom: 10px;
